# sprite-sheet-fixer

./: .gitignore  CMakeLists.txt  README.md
Core/: CMakeLists.txt
Core/Include/: StudioEngineFacade.h
Core/Include/Commands/: AnimationCommands.h.bak  BatchCommands.h.bak  CommandHistory.h.bak  EditMetadataCommand.h  ICommand.h  MoveSpriteCommand.h  MoveSpriteCommand.h.bak  MoveSpriteWithPixelsCommand.h  PixelCommands.h
Core/Include/DataModels/: AnimationGroup.h  ExportSettings.h  Project.h  Project.h.bak  SourceTexture.h  SpriteDefinition.h  SpriteDefinition.h.bak  WorkspacePreferences.h
Core/Include/Processing/: AtlasPacker.h  AtlasPacker.h.bak  ImageLoader.h  SpriteAligner.h  SpriteDetector.h.bak
Core/Include/Systems/: AnimationBuilder.h  BackgroundJobQueue.h  ExportManager.h  PlaybackEngine.h  ProjectManager.h.bak  WorkspaceManager.h.bak
Core/Source/: StudioEngineFacade.cpp  StudioEngineFacade.cpp.bak
Core/Source/Commands/: AnimationCommands.cpp  BatchCommands.cpp  BatchCommands.cpp.bak  CommandHistory.cpp  EditMetadataCommand.cpp
Core/Source/DataModels/: AnimationGroup.cpp  AnimationGroup.cpp.bak  Project.cpp  SourceTexture.cpp  SpriteDefinition.cpp
Core/Source/Processing/: AtlasPacker.cpp  ImageLoader.cpp  SpriteAligner.cpp  SpriteDetector.cpp
Core/Source/Systems/: AnimationBuilder.cpp  BackgroundJobQueue.cpp.bak  ExportManager.cpp  PlaybackEngine.cpp  ProjectManager.cpp  (+2 more)
UI/: CMakeLists.txt
UI/Include/: MainApplicationWindow.h  SpriteSheetStudioPanel.h  Theme.h
UI/Source/: MainApplicationWindow.cpp  SpriteSheetStudioPanel.cpp  main.cpp
(+64 files in other folders)
